<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/mainbackdrop"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="122dp"
        android:layout_marginBottom="213dp"
        android:dropDownWidth="wrap_content"
        android:dropDownSelector="@android:color/transparent"
        android:entries="@array/spinnerstrings"
        android:gravity="clip_horizontal|center" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="48dp"
        android:clickable="true"
        android:onClick="generatorTrigger"
        app:srcCompat="@drawable/nextnobackground" />

</RelativeLayout>