...
        android:scrollbars="vertical"
        android:textColor="@color/black"
        android:textSize="30sp"
        tools:targetApi="o" />

    <ImageView
        android:id="@+id/trigger"
        android:layout_width="269dp"
        android:layout_height="127dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="68dp"
...
